[package]
name        = "hexotk"
version     = "0.5.0"
authors     = ["Weird Constructor <weirdconstructor@m8geil.de>"]
edition     = "2021"
license     = "GPL-3.0-or-later"
description = "HexoTK - A GUI Toolkit for Audio Plugins"

[lib]
name = "hexotk"

[features]
default=[]
driver=[]

[dependencies]
winit              = { version = "0.26.1", features = ["x11"] }
hexodsp            = { git = "https://github.com/WeirdConstructor/HexoDSP.git" }
#hexodsp             = { path = "../hexodsp" }
femtovg            = { git = "https://github.com/femtovg/femtovg" }
raw-gl-context     = { git = "https://github.com/glowcoil/raw-gl-context" }
morphorm           = { git = "https://github.com/WeirdConstructor/morphorm.git" }
#morphorm           = { path = "../morphorm" }
baseview           = { git = "https://github.com/RustAudio/baseview.git", features = ["opengl"] }
keyboard-types     = { version = "0.6.1", default-features = false }
raw-window-handle  = "0.4.2"
gl                 = "0.14.0"
glutin             = { version = "0.28.0", features = ["x11"] }
