[package]
name        = "hexotk"
version     = "0.5.1"
authors     = ["Weird Constructor <weirdconstructor@m8geil.de>"]
edition     = "2021"
license     = "GPL-3.0-or-later"
description = "HexoTK - A GUI Toolkit for Audio Plugins"

[lib]
name = "hexotk"

[features]
default=[]
driver=[]

[dependencies]
hexodsp            = { git = "https://github.com/WeirdConstructor/HexoDSP.git" }
#hexodsp             = { path = "../hexodsp" }
femtovg            = { git = "https://github.com/femtovg/femtovg", default-features = false, features = ["image-loading"] }
#femtovg            = { path = "../other/femtovg", features = ["image-loading"] }
image              = { version = "0.24.3", features = ["png", "jpeg"] }
raw-gl-context     = { git = "https://github.com/glowcoil/raw-gl-context" }
morphorm           = { git = "https://github.com/WeirdConstructor/morphorm.git" }
#morphorm           = { path = "../morphorm" }
baseview           = { git = "https://github.com/RustAudio/baseview.git", features = ["opengl"] }
keyboard-types     = { version = "0.6.1", default-features = false }
pulldown-cmark     = "0.9.2"
raw-window-handle  = "0.5.0"
gl                 = "0.14.0"
